--- a/progettoiseo/accounts/templates/registration/logout_confirm.html
+++ b/progettoiseo/accounts/templates/registration/logout_confirm.html
@@ -24,7 +24,7 @@
                                 <i class="fas fa-sign-out-alt"></i> Sì, Disconnettimi
                             </button>
                         </form>
-                        <a href="{% url 'home' %}" class="btn btn-secondary">
+                        <a href="{{ back_url }}" class="btn btn-secondary">
                             <i class="fas fa-arrow-left"></i> Annulla
                         </a>
                     </div>
